--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,6 +1,5 @@
 .about {
     padding: 3rem 2rem;
-    background-color: #f5f5f5;
-    color: #333;
+    background-color: #ddcecea6;
+    color: #000000;
   }
-  
