--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -12,8 +12,8 @@
 
 .hero .highlight {
   color: #6ca2d8;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-weight: initial;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bolder;
 }
 .top-left {
   height: 50px;
@@ -77,22 +77,28 @@
 
 .animate-delay-1 {
   animation-delay: 0.3s;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Georgia, 'Times New Roman', Times, serif;
   font-style: italic;
 }
 .animate-delay-2 {
   animation-delay: 0.6s;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Georgia, 'Times New Roman', Times, serif;
   font-style: italic;
 }
 .animate-delay-3 {
   animation-delay: 0.9s;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Georgia, 'Times New Roman', Times, serif;
   font-style: italic;
 }
+
 .animate-delay-4 {
+  animation-delay: 0.9s;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-style: italic;
+}
+.animate-delay-5 {
   animation-delay: 1.2s;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Georgia, 'Times New Roman', Times, serif;
   font-style: italic;
   background: rgb(65, 114, 49);
   break-inside: auto;
