--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,22 @@
   width: auto;
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
+
+
+.fade-wrapper {
+  animation: fadeIn 0.8s ease-out forwards;
+}
+
+.fade-out {
+  animation: fadeOut 0.8s ease-out forwards;
+}
+
+@keyframes fadeOut {
+  from { opacity: 1; }
+  to { opacity: 0; }
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
